src/snapshots/linesweeper__topology__tests__inner_loop.snap
---
source: src/topology.rs
expression: "(top, contours)"
---
(Topology(
  eps: 0.01,
  tag: [
    true,
    true,
    true,
    true,
    false,
    false,
    false,
    false,
    false,
    false,
  ],
  open_segs: [
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  winding: OutputSegVec(
    inner: [
      HalfSegmentWindingNumbers(
        counter_clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 0,
        ),
        clockwise: BinaryWindingNumber(
          shape_a: 0,
          shape_b: 0,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: BinaryWindingNumber(
          shape_a: 0,
          shape_b: 0,
        ),
        clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 0,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: BinaryWindingNumber(
          shape_a: 0,
          shape_b: 0,
        ),
        clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 0,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 1,
        ),
        clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 0,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 0,
        ),
        clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 1,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 0,
        ),
        clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 1,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 2,
        ),
        clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 1,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 1,
        ),
        clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 2,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 1,
        ),
        clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 2,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 0,
        ),
        clockwise: BinaryWindingNumber(
          shape_a: 0,
          shape_b: 0,
        ),
      ),
      HalfSegmentWindingNumbers(
        counter_clockwise: BinaryWindingNumber(
          shape_a: -1,
          shape_b: 0,
        ),
        clockwise: BinaryWindingNumber(
          shape_a: 0,
          shape_b: 0,
        ),
      ),
    ],
  ),
  points: PointVec(
    inner: [
      Point(
        y: -2.0,
        x: -2.0,
      ),
      Point(
        y: -2.0,
        x: 2.0,
      ),
      Point(
        y: -1.0,
        x: -1.5,
      ),
      Point(
        y: -1.0,
        x: 1.5,
      ),
      Point(
        y: 0.0,
        x: -0.1,
      ),
      Point(
        y: 0.0,
        x: 0.1,
      ),
      Point(
        y: 2.0,
        x: -2.0,
      ),
      Point(
        y: 2.0,
        x: 0.0,
      ),
      Point(
        y: 2.0,
        x: 2.0,
      ),
    ],
  ),
  point_idx: HalfOutputSegVec(
    start: [
      PointIdx(0),
      PointIdx(0),
      PointIdx(1),
      PointIdx(2),
      PointIdx(2),
      PointIdx(3),
      PointIdx(4),
      PointIdx(4),
      PointIdx(5),
      PointIdx(6),
      PointIdx(7),
    ],
    end: [
      PointIdx(6),
      PointIdx(1),
      PointIdx(8),
      PointIdx(7),
      PointIdx(3),
      PointIdx(7),
      PointIdx(7),
      PointIdx(5),
      PointIdx(7),
      PointIdx(7),
      PointIdx(8),
    ],
  ),
  point_neighbors: HalfOutputSegVec(
    start: [
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(1),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(1),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(0),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(0),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(1),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(1),
          first_half: false,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(4),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(4),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(3),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(3),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(4),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(4),
          first_half: false,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(7),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(7),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(6),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(6),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(7),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(7),
          first_half: false,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(0),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(0),
          first_half: false,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(9),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(5),
          first_half: false,
        ),
      ),
    ],
    end: [
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(9),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(9),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(2),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(2),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(10),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(10),
          first_half: false,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(6),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(9),
          first_half: false,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(5),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(5),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(10),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(8),
          first_half: false,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(8),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(3),
          first_half: false,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(8),
          first_half: true,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(8),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(5),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(6),
          first_half: false,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(3),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(10),
          first_half: true,
        ),
      ),
      PointNeighbors(
        clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(2),
          first_half: false,
        ),
        counter_clockwise: HalfOutputSegIdx(
          idx: OutputSegIdx(2),
          first_half: false,
        ),
      ),
    ],
  ),
  deleted: OutputSegVec(
    inner: [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
  ),
  scan_west: OutputSegVec(
    inner: [
      None,
      Some(OutputSegIdx(0)),
      Some(OutputSegIdx(0)),
      Some(OutputSegIdx(0)),
      Some(OutputSegIdx(3)),
      Some(OutputSegIdx(3)),
      Some(OutputSegIdx(3)),
      Some(OutputSegIdx(6)),
      Some(OutputSegIdx(6)),
      None,
      None,
    ],
  ),
  scan_east: OutputSegVec(
    inner: [
      None,
      None,
      None,
      None,
      None,
      Some(OutputSegIdx(2)),
      None,
      None,
      Some(OutputSegIdx(5)),
      None,
      None,
    ],
  ),
  scan_after: [],
  orig_seg: OutputSegVec(
    inner: [
      SegIdx(3),
      SegIdx(0),
      SegIdx(1),
      SegIdx(4),
      SegIdx(6),
      SegIdx(5),
      SegIdx(7),
      SegIdx(9),
      SegIdx(8),
      SegIdx(2),
      SegIdx(2),
    ],
  ),
  positively_oriented: OutputSegVec(
    inner: [
      false,
      true,
      true,
      true,
      false,
      false,
      true,
      false,
      false,
      false,
      false,
    ],
  ),
), Contours(
  contours: [
    Contour(
      path: BezPath([
        MoveTo(Point(
          x: -2.0,
          y: -2.0,
        )),
        CurveTo(Point(
          x: -2.0,
          y: -0.6666666666666667,
        ), Point(
          x: -2.0,
          y: 0.6666666666666667,
        ), Point(
          x: -2.0,
          y: 2.0,
        )),
        LineTo(Point(
          x: 0.0,
          y: 2.0,
        )),
        LineTo(Point(
          x: 2.0,
          y: 2.0,
        )),
        CurveTo(Point(
          x: 2.0,
          y: 0.6666666666666667,
        ), Point(
          x: 2.0,
          y: -0.6666666666666667,
        ), Point(
          x: 2.0,
          y: -2.0,
        )),
        LineTo(Point(
          x: -2.0,
          y: -2.0,
        )),
        ClosePath,
      ]),
      parent: None,
      outer: true,
    ),
    Contour(
      path: BezPath([
        MoveTo(Point(
          x: 0.0,
          y: 2.0,
        )),
        QuadTo(Point(
          x: -0.008055555556111234,
          y: 1.9838888888877775,
        ), Point(
          x: -0.010000000000749963,
          y: 1.9799999999985,
        )),
        CurveTo(Point(
          x: -0.5066666666671666,
          y: 0.9866666666656669,
        ), Point(
          x: -1.0033333333335834,
          y: -0.006666666667166643,
        ), Point(
          x: -1.5,
          y: -1.0,
        )),
        LineTo(Point(
          x: 1.5,
          y: -1.0,
        )),
        CurveTo(Point(
          x: 1.0033333333335834,
          y: -0.006666666667166643,
        ), Point(
          x: 0.5066666666671666,
          y: 0.9866666666656669,
        ), Point(
          x: 0.010000000000749963,
          y: 1.9799999999985,
        )),
        QuadTo(Point(
          x: 0.008055555556111234,
          y: 1.9838888888877775,
        ), Point(
          x: 0.0,
          y: 2.0,
        )),
        ClosePath,
      ]),
      parent: Some(ContourIdx(0)),
      outer: false,
    ),
    Contour(
      path: BezPath([
        MoveTo(Point(
          x: -0.1,
          y: 0.0,
        )),
        CurveTo(Point(
          x: -0.06850000000001669,
          y: 0.6299999999996666,
        ), Point(
          x: -0.03700000000003334,
          y: 1.2599999999993334,
        ), Point(
          x: -0.00550000000005,
          y: 1.889999999999,
        )),
        QuadTo(Point(
          x: -0.003555555555636131,
          y: 1.9288888888872777,
        ), Point(
          x: -0.0016111111112222405,
          y: 1.9677777777755552,
        )),
        QuadTo(Point(
          x: -0.000805555555611143,
          y: 1.9838888888877775,
        ), Point(
          x: 0.0,
          y: 2.0,
        )),
        QuadTo(Point(
          x: 0.000805555555611143,
          y: 1.9838888888877775,
        ), Point(
          x: 0.0016111111112222405,
          y: 1.9677777777755552,
        )),
        QuadTo(Point(
          x: 0.003555555555636131,
          y: 1.9288888888872777,
        ), Point(
          x: 0.00550000000005,
          y: 1.889999999999,
        )),
        CurveTo(Point(
          x: 0.03700000000003334,
          y: 1.2599999999993334,
        ), Point(
          x: 0.06850000000001669,
          y: 0.6299999999996666,
        ), Point(
          x: 0.1,
          y: 0.0,
        )),
        LineTo(Point(
          x: -0.1,
          y: 0.0,
        )),
        ClosePath,
      ]),
      parent: Some(ContourIdx(1)),
      outer: true,
    ),
  ],
))
